Added ts host environment

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "TypeScriptLanguageServiceGenerator/TypeScript"]
 	path = TypeScriptLanguageServiceGenerator/TypeScript
 	url = git@github.com:Microsoft/TypeScript.git
+[submodule "TypeScript"]
+	path = TypeScript
+	url = git@github.com:Microsoft/TypeScript.git
