--- a/TypeScriptLanguageServiceTranspiler/TypeScriptLanguageServiceTranspiler.csproj
+++ b/TypeScriptLanguageServiceTranspiler/TypeScriptLanguageServiceTranspiler.csproj
@@ -49,14 +49,15 @@
     <Compile Include="TypeScriptServiceHostEnvironment.cs" />
     <Compile Include="Utilities\Utilities.cs" />
     <Compile Include="Transpiler.cs" />
-    <Compile Include="T4Templates\CSharpTypeScriptLanguageService.cs">
-      <DependentUpon>CSharpTypeScriptLanguageService.tt</DependentUpon>
-    </Compile>
     <Compile Include="T4Templates\TypescriptTypes.cs">
       <DependentUpon>TypescriptTypes.tt</DependentUpon>
     </Compile>
     <Compile Include="T4Templates\TypeScriptServiceHostEnvironment.cs" />
     <Compile Include="T4Templates\Utilities.cs" />
+    <Compile Include="T4Templates\TypeScriptLanguageService.cs">
+      <DependentUpon>TypeScriptLanguageService.tt</DependentUpon>
+    </Compile>
+    <Compile Include="T4Templates\ScriptSnapshotAdapter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -90,9 +91,9 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>TypescriptTypes.cs</LastGenOutput>
     </None>
-    <None Include="T4Templates\CSharpTypeScriptLanguageService.tt">
+    <None Include="T4Templates\TypeScriptLanguageService.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>CSharpTypeScriptLanguageService.cs</LastGenOutput>
+      <LastGenOutput>TypeScriptLanguageService.cs</LastGenOutput>
     </None>
   </ItemGroup>
 </Project>
