Make V8Host independent from the application host
To make the V8TypeScriptHostEnvironment independent form the application
host we seperated all v8 related objects from the application objects

- V8CancelationToken encapsulates CancelationToken
- V8ScriptSnapshot encapsulates ScriptSnapshot
- ...
to marshal opjects for v8.

- moved subs for templates in a separate folder.
- Added Iscriptsnapshot manually to generated objects

--- a/TypeScriptLanguageService/TypeScriptLanguageService.csproj
+++ b/TypeScriptLanguageService/TypeScriptLanguageService.csproj
@@ -48,12 +48,10 @@
     <Compile Include="..\TypeScriptLanguageServiceTranspiler\T4Templates\TypescriptTypes.cs">
       <Link>TypescriptTypes.cs</Link>
     </Compile>
-    <Compile Include="TypeScriptServiceHostEnvironment.cs" />
     <Compile Include="Utilities.cs" />
-    <Compile Include="IScript.cs" />
-    <Compile Include="CancellationToken.cs" />
-    <Compile Include="ScriptSnapshotAdapter.cs" />
-    <Compile Include="IScriptSnapshotAdapter.cs" />
+    <Compile Include="V8ScriptSnapshot.cs" />
+    <Compile Include="V8CancellationToken.cs" />
+    <Compile Include="V8TypeScriptServiceHostEnv.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
