--- a/TypeScriptLanguageServiceTranspiler/TypeScriptLanguageServiceTranspiler.csproj
+++ b/TypeScriptLanguageServiceTranspiler/TypeScriptLanguageServiceTranspiler.csproj
@@ -49,12 +49,6 @@
     <Compile Include="TypeScriptServiceHostEnvironment.cs" />
     <Compile Include="Utilities\Utilities.cs" />
     <Compile Include="Transpiler.cs" />
-    <Compile Include="T4Templates\TypescriptTypes.cs">
-      <DependentUpon>TypescriptTypes.tt</DependentUpon>
-    </Compile>
-    <Compile Include="T4Templates\TypeScriptLanguageService.cs">
-      <DependentUpon>TypeScriptLanguageService.tt</DependentUpon>
-    </Compile>
     <Compile Include="stubs\Utilities.cs" />
     <Compile Include="stubs\V8CancellationToken.cs" />
     <Compile Include="stubs\V8ScriptSnapshot.cs" />
@@ -96,6 +90,19 @@
     <None Include="T4Templates\TypeScriptLanguageService.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>TypeScriptLanguageService.cs</LastGenOutput>
+    </None>
+    <None Include="T4Templates\ITypeScriptLanguageService.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ITypeScriptLanguageService.cs</LastGenOutput>
+    </None>
+    <None Include="T4Templates\ITypeScriptLanguageService.cs">
+      <DependentUpon>ITypeScriptLanguageService.tt</DependentUpon>
+    </None>
+    <None Include="T4Templates\TypeScriptLanguageService.cs">
+      <DependentUpon>TypeScriptLanguageService.tt</DependentUpon>
+    </None>
+    <None Include="T4Templates\TypescriptTypes.cs">
+      <DependentUpon>TypescriptTypes.tt</DependentUpon>
     </None>
   </ItemGroup>
 </Project>
