--- a/TypeScriptLanguageService.Test/TypeScriptLanguageService.Test.csproj
+++ b/TypeScriptLanguageService.Test/TypeScriptLanguageService.Test.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EFE99181-EA84-478B-AAA3-629CC58EF17F}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>TypeScriptLanguageServiceTranspilerTest</RootNamespace>
-    <AssemblyName>TypeScriptLanguageServiceTranspilerTest</AssemblyName>
+    <ProjectGuid>{60E19FE8-B06C-4EED-9C53-1F40A48577A4}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>TypeScriptLanguageService.Test</RootNamespace>
+    <AssemblyName>TypeScriptLanguageService.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -17,7 +17,7 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -29,9 +29,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="V8.Net">
       <HintPath>..\V8dotnet\linux.x64\V8.Net.dll</HintPath>
     </Reference>
@@ -41,19 +38,40 @@
     <Reference Include="V8.Net.SharedTypes">
       <HintPath>..\V8dotnet\linux.x64\V8.Net.SharedTypes.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentAssertions.Core">
+      <HintPath>..\packages\FluentAssertions.3.3.0\lib\net45\FluentAssertions.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentAssertions">
+      <HintPath>..\packages\FluentAssertions.3.3.0\lib\net45\FluentAssertions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FakeTypeScriptLanguageServiceHost.cs" />
+    <Compile Include="LanguageServiceTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\TypeScriptLanguageService\TypeScriptLanguageService.csproj">
+      <Project>{124CE5EA-0E3B-4C66-A880-6A4062D5784A}</Project>
+      <Name>TypeScriptLanguageService</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TypeScriptLanguageServiceTranspiler\TypeScriptLanguageServiceTranspiler.csproj">
-      <Project>{B3FF98B1-B867-4D05-BDE6-7B602BEEE9BB}</Project>
-      <Name>TypeScriptLanguageServiceTranspiler</Name>
-    </ProjectReference>
+    <None Include="..\TypeScriptLanguageServiceTranspiler\lib.d.ts">
+      <Link>lib.d.ts</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\TypeScriptLanguageServiceTranspiler\typescriptServices.js">
+      <Link>typescriptServices.js</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
