--- a/TypeScriptLanguageService/TypeScriptLanguageService.csproj
+++ b/TypeScriptLanguageService/TypeScriptLanguageService.csproj
@@ -8,8 +8,6 @@
     <RootNamespace>TypeScriptLanguageService</RootNamespace>
     <AssemblyName>TypeScriptLanguageService</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,6 +39,9 @@
       <HintPath>..\V8dotnet\linux.x64\V8.Net.SharedTypes.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -51,13 +52,13 @@
       <Link>TypescriptTypes.cs</Link>
     </Compile>
     <Compile Include="Utilities.cs" />
-    <Compile Include="V8ScriptSnapshot.cs" />
     <Compile Include="V8CancellationToken.cs" />
     <Compile Include="V8TypeScriptServiceHostEnv.cs" />
     <Compile Include="..\TypeScriptLanguageServiceTranspiler\T4Templates\ITypeScriptLanguageService.cs">
       <Link>ITypeScriptLanguageService.cs</Link>
     </Compile>
     <Compile Include="V8ScriptSnapshotAdapter.cs" />
+    <Compile Include="IScriptSnapshotExtension.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -76,4 +77,7 @@
       </Properties>
     </MonoDevelop>
   </ProjectExtensions>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
